--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,406 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import { CarouselProjects } from "../components/CarouselProjects";
+import { CarouselClients } from "../components/CarouselClients";
+import { FormContact } from "../components/FormContact";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Ciudad Renovable">
 	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+		<section class="banner"></section>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
+		<section class="manifest">
+			<div>
+				<h2>Manifesto de marca</h2>
+				<p>
+					Creemos que para ser coherentes con el bienestar que suscitamos, es
+					necesario hablar desde las acciones y decisiones empresariales; por
+					eso, y aunque estamos de acuerdo en que la palabra teje y construye,
+					reflejamos nuestro impact compartiendo los resultados reales de lo que
+					hacemos, de nuestra cultura interna de trabajo y de los cambios
+					positivos en el planeta gracias a los proyectos sostenibles.
+				</p>
+
+				<div class="button_more">
+					<a href="">Leer Más</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="about">
+			<div>
+				<div>
+					<h2>Quienes somos</h2>
+					<p>
+						Ciudad Renovable es una empresa especializada en el diseño,
+						construcción, operación y consultoría de proyectos de ingeniería con
+						enfoque en energía solar, asegurando la eficiencia energética y
+						optimizando el uso de los recursos.
+					</p>
+
+					<div class="button_about">
+						<a href="">Conoce más de nosotros</a>
+					</div>
+				</div>
+
+				<video src=""></video>
+			</div>
+		</section>
+
+		<section class="cotizar">
+			<div>
+				<a href="">Cotizar Proyecto</a>
+			</div>
+		</section>
+
+		<section class="impact">
+			<div>
+				<h2>Nuestro impact en números</h2>
+				<div class="impac_line"></div>
+			</div>
+			<img src="./images/impacto.png" alt="impact" />
+		</section>
+
+		<section class="projects">
+			<div>
+				<h2>Proyectos</h2>
+				<div class="projects_line"></div>
+			</div>
+
+			<span>Te presentamos nuestros proyectos más destacados.</span>
+
+			<div class="carousel_container">
+				<CarouselProjects />
+			</div>
+
+			<div class="button_projects">
+				<a href="#">Ver Más Proyectos</a>
+			</div>
+		</section>
+
+		<section class="clients">
+			<div>
+				<h2>Nuestros Clientes</h2>
+				<div class="line_clients"></div>
+			</div>
+
+			<div>
+				<CarouselClients />
+			</div>
+		</section>
+
+		<section class="contact">
+			<div>
+				<h2>Contáctanos</h2>
+				<div class="line_contact"></div>
+			</div>
+			<span> Déjanos tus datos para obtener más información</span>
+
+			<div>
+				<FormContact />
+			</div>
+		</section>
+	</main>
+
+	<style>
+		main {
+			color: white;
+			font-size: 20px;
+			line-height: 1.6;
+			overflow-x: hidden;
+		}
+
+		.banner {
+			height: 80vh;
+			background-position-y: 30%;
+			background-image: url(/images/imgBanner.png);
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+
+		.manifest {
+			height: 211px;
+			background: #00e95f;
+		}
+
+		.manifest > div {
+			max-width: 1438px;
+			margin: 0 auto;
+			height: 100%;
+			display: flex;
+			padding: 30px 50px;
+			gap: 50px;
+			align-items: center;
+			justify-content: space-around;
+		}
+
+		.manifest h2 {
+			color: #021731;
+			font-size: 40px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+		}
+
+		.manifest p {
+			width: 574px;
+			height: 114px;
+			color: #000;
+
+			font-size: 16px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+		}
+
+		.button_more {
+			display: flex;
+			width: 170px;
+			height: 54px;
+			padding: 10px;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			flex-shrink: 0;
+			border-radius: 37px;
+			border: 1px solid #021731;
+			color: #021731;
+			font-size: 24px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+			transition: all 0.4s ease-out;
+			cursor: pointer;
+		}
+
+		.button_more:hover {
+			background-color: #021731;
+			color: #00e95f;
+		}
+
+		.about {
+			height: 484px;
+		}
+
+		.about > div {
+			max-width: 1438px;
+			display: flex;
+			gap: 84px;
+			align-items: center;
+			height: 100%;
+			margin: 0 auto;
+		}
+
+		.about > div > div {
+			width: 50vw;
+			display: flex;
+			flex-direction: column;
+			gap: 30px;
+			padding: 0 50px;
+		}
+
+		.about div h2 {
+			color: #51516b;
+			/* H1 TITULOS */
+
+			font-size: 43px;
+			font-style: normal;
+			font-weight: bolder;
+			line-height: normal;
+		}
+
+		.about div p {
+			color: #a8a8a8;
+			font-size: 22px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+		}
+
+		.button_about {
+			display: flex;
+			width: 337px;
+			height: 58px;
+			padding: 10px;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			flex-shrink: 0;
+			border-radius: 37px;
+			border: 1px solid #a8a8a8;
+			color: #a8a8a8;
+			text-align: center;
+			font-size: 24px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			transition: all 0.4s ease-out;
+			cursor: pointer;
+		}
+
+		.button_about:hover {
+			background-color: #00e95f;
+			color: #021731;
+		}
+
+		.cotizar {
+			height: 215px;
+			background: #021731;
+			display: grid;
+			place-content: center;
+		}
+
+		.cotizar div {
+			display: flex;
+			width: 293px;
+			height: 69px;
+			justify-content: center;
+			align-items: center;
+			border-radius: 37px;
+			border: 1px solid #00e95f;
+			background: #00e95f;
+			color: #021731;
+			font-weight: 800;
+			transition: all 0.4s ease-out;
+			cursor: pointer;
+		}
+
+		.cotizar div:hover {
+			background-color: #021731;
+			color: #00e95f;
+		}
+
+		.impact {
+			height: 554px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			gap: 30px;
+		}
+
+		.impact h2 {
+			color: #021731;
+			font-size: 43px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+		}
+
+		.impact .impac_line {
+			width: 85.455px;
+			height: 3px;
+			background: #00e95f;
+			margin: 0 auto;
+		}
+
+		.projects {
+			height: 1034px;
+			background: #dcdcdc;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-evenly;
+		}
+
+		.projects h2 {
+			color: #021731;
+			text-align: center;
+			font-size: 43px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+		}
+
+		.projects_line {
+			width: 85.455px;
+			height: 3px;
+			background: #00e95f;
+			margin: 0 auto;
+		}
+
+		.projects span {
+			color: #51516b;
+			text-align: center;
+			font-size: 24px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+			text-transform: uppercase;
+		}
+
+		.carousel_container {
+			width: 99vw;
+			position: relative;
+			height: 500px;
+		}
+
+		.button_projects {
+			display: flex;
+			width: 278px;
+			height: 70px;
+			padding: 10px 20px;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			flex-shrink: 0;
+			border-radius: 37px;
+			background-color: #00e95f;
+			font-size: 20px;
+			font-style: normal;
+			font-weight: 800;
+			line-height: normal;
+			color: #021731;
+		}
+
+		.clients {
+			height: 350px;
+			background: white;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-evenly;
+		}
+
+		.clients h2 {
+			font-size: 43px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+			text-align: center;
+			color: #021731;
+		}
+
+		.line_clients,
+		.line_contact {
+			width: 85.455px;
+			height: 3px;
+			background-color: #00e95f;
+			margin: 0 auto;
+		}
+
+		.contact {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 30px;
+		}
+
+		.contact h2 {
+			font-size: 43px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+			color: #021731;
+		}
+
+		.contact span {
+			font-size: 20px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+			color: #51516b;
+			text-align: center;
+		}
+	</style>
+</Layout>
