--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,12 @@
 <header>
 	<a href="/">
-		<img src="/images/menu.svg" alt="logo" />
+		<img src="./images/menu.svg" alt="logo" />
 	</a>
 
 	<nav>
 		<ul class="list_nav">
 			<li>
-				<a href="">INICIO</a>
+				<a href="/">INICIO</a>
 			</li>
 			<li>
 				<a href="">SERVICIOS</a>
