--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import { FormContact } from "../components/FormContact";
 					</div>
 				</div>
 
-				<video src=""></video>
+				<video src="/videos/DJI_0292.MP4" controls></video>
 			</div>
 		</section>
 
@@ -113,7 +113,7 @@ import { FormContact } from "../components/FormContact";
 		.banner {
 			height: 80vh;
 			background-position-y: 30%;
-			background-image: url(/images/imgBanner.png);
+			background-image: url("/images/imgBanner.png");
 			background-repeat: no-repeat;
 			background-size: cover;
 		}
@@ -241,6 +241,12 @@ import { FormContact } from "../components/FormContact";
 		.button_about:hover {
 			background-color: #00e95f;
 			color: #021731;
+		}
+
+		.about video {
+			width: 550px;
+
+      border-radius: 31px;
 		}
 
 		.cotizar {
@@ -404,3 +410,4 @@ import { FormContact } from "../components/FormContact";
 		}
 	</style>
 </Layout>
+ ../components/CarouselClients/CarouselProjects
