--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ import { FormContact } from "../components/FormContact";
 			<span>Te presentamos nuestros proyectos más destacados.</span>
 
 			<div class="carousel_container">
-				<CarouselProjects />
+				<CarouselProjects client:load />
 			</div>
 
 			<div class="button_projects">
@@ -246,7 +246,7 @@ import { FormContact } from "../components/FormContact";
 		.about video {
 			width: 550px;
 
-      border-radius: 31px;
+			border-radius: 31px;
 		}
 
 		.cotizar {
