--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,28 +1,28 @@
 <footer>
 	<div>
-		<img src="/images/logo_footer.svg" alt="logo" />
-		<div class="questions_container">
-			<span>Pregunta 1</span>
-			<span>Pregunta 2</span>
-		</div>
+		<img src="/images/logoCiudadFooter.png" alt="logo" />
 		<div>
+			<!-- <span>Pregunta 1</span>
+			<span>Pregunta 2</span> -->
 			<div class="contacts_container">
-				<img src="/icons/logo_wssp.svg" alt="" />
-				<span>wpp: 000 000 0000</span>
-			</div>
-			<div class="contacts_container">
-				<img src="/icons/logo_phone.svg" alt="" />
-				<span>phone: 000 000 0000</span>
+				<img src="/icons/logowssp.svg" alt="" />
+				<span>wpp: 301 69559630</span>
 			</div>
 		</div>
-		<div>
+		<!-- <div>
 			<div class="contacts_container">
-				<img src="/icons/logo_wssp.svg" alt="" />
-				<span>wpp: 000 000 0000</span>
+				<img src="/icons/logophone.svg" alt="" />
+				<span>phone: 301 6955963</span>
 			</div>
+		</div> -->
+		<div>
+			<!-- <div class="contacts_container">
+				<img src="/icons/logowssp.svg" alt="" />
+				<span>wpp: 000 000 0000</span>
+			</div> -->
 			<div class="contacts_container">
-				<img src="/icons/logo_email.svg" alt="" />
-				<span>correo@correo.co</span>
+				<img src="/icons/logoemail.svg" alt="" />
+				<span>sjaramillo@ciudadrenovable.com</span>
 			</div>
 		</div>
 	</div>
@@ -65,7 +65,7 @@
 		display: flex;
 		align-items: center;
 		gap: 10px;
-    height: 43px;
+		height: 43px;
 	}
 
 	.contacts_container span {
