--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header>
 	<a href="/">
-		<img src="./images/menu.svg" alt="logo" />
+		<img src="/images/logo_ciudad.png" alt="logo" />
 	</a>
 
 	<nav>
@@ -8,20 +8,20 @@
 			<li>
 				<a href="/">INICIO</a>
 			</li>
+			<!-- <li>
+				<a href="/#servicios">SERVICIOS</a>
+			</li> -->
 			<li>
-				<a href="">SERVICIOS</a>
-			</li>
-			<li>
-				<a href="">NOSOTROS</a>
+				<a href="/#nosotros">NOSOTROS</a>
 			</li>
 			<li>
 				<a href="/proyectos">PROYECTOS</a>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="">COTIZACIÓN</a>
-			</li>
+			</li> -->
 			<li>
-				<a href="">CONTACTO</a>
+				<a href="/#contacto">CONTACTO</a>
 			</li>
 		</ul>
 	</nav>
@@ -52,4 +52,8 @@
 		font-weight: bolder;
 		line-height: normal;
 	}
+
+a:hover{
+  color: #00e95f;
+}
 </style>
