--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -5,39 +5,39 @@ import Cardprojects from "../components/CardProjects.astro";
 const projects = [
 	{
 		title: "Tronex",
-		img: "/images/projects/tronex.png",
+		img: "/images/tronexVitelsa.png",
 	},
 	{
 		title: "Yokomotor",
-		img: "/images/projects/yokomotor.png",
+		img: "/images/yokoMotor.png",
 	},
 	{
 		title: "EyA CDA Autofull",
-		img: "/images/projects/eya.png",
+		img: "/images/eya.png",
 	},
 	{
 		title: "Mundial GyP",
-		img: "/images/projects/mundialGyp.png",
+		img: "/images/mundoGYP.png",
 	},
 	{
 		title: "EyA Guayacán de la Calera",
-		img: "/images/projects/eyaGuayacan.png",
+		img: "/images/EYACalera.png",
 	},
 	{
 		title: "Edemco - Jericó",
-		img: "/images/projects/EdemcoJerico.png",
+		img: "/images/Edemco.png",
 	},
 	{
 		title: "Andrés Julián Rendón",
-		img: "/images/projects/andresrendon.png",
+		img: "/images/AndresJulian.png",
 	},
 	{
 		title: "Tiendas Ara",
-		img: "/images/projects/tiendaAra.png",
+		img: "/images/tiendasAra.png",
 	},
 	{
 		title: "Juan Pedro Munera",
-		img: "/images/projects/juanPedroMunera.png",
+		img: "/images/JuanPedroMunera.png",
 	},
 ];
 ---
@@ -66,7 +66,7 @@ const projects = [
 
 	<style>
 		.banner {
-			background-image: url("./images/banner_proyectos.png");
+			background-image: url("./images/bannerProyectos.png");
 			height: 358px;
 			background-size: contain;
 			background-repeat: no-repeat;
