--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,8 +36,9 @@ const { title } = Astro.props;
 				font-family: "Montserrat";
 				background: #fff;
 				color: #000;
+        scroll-behavior: smooth
 			}
-
+      
 			a {
 				color: inherit;
 				text-decoration: none;
