add facebook instagram contact

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,10 @@
 				<img src="/icons/logowssp.svg" alt="" />
 				<span>wpp: 301 69559630</span>
 			</div>
+			<div class="contacts_container">
+				<img src="/icons/logoemail.svg" alt="" />
+				<span>sjaramillo@ciudadrenovable.com</span>
+			</div>
 		</div>
 		<!-- <div>
 			<div class="contacts_container">
@@ -16,14 +20,26 @@
 			</div>
 		</div> -->
 		<div>
-			<!-- <div class="contacts_container">
-				<img src="/icons/logowssp.svg" alt="" />
-				<span>wpp: 000 000 0000</span>
-			</div> -->
-			<div class="contacts_container">
-				<img src="/icons/logoemail.svg" alt="" />
-				<span>sjaramillo@ciudadrenovable.com</span>
-			</div>
+			<a
+				target="_blank"
+				href="https://www.instagram.com/ciudadrenovable/?igshid=MzRlODBiNWFlZA%3D%3D"
+				class="contacts_container"
+			>
+				<img
+					width="28px"
+					src="/icons/icons8-instagram.svg"
+					alt="logo instagram"
+				/>
+				<span>Instagram</span>
+			</a>
+			<a
+				target="_blank"
+				href="https://www.facebook.com/ciudadrenovable"
+				class="contacts_container"
+			>
+				<img src="/icons/icons8-facebook.svg" alt="" />
+				<span>Facebook</span>
+			</a>
 		</div>
 	</div>
 </footer>
