--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ import { FormContact } from "../components/FormContact";
 			</div>
 
 			<div class="button_projects">
-				<a href="#">Ver Más Proyectos</a>
+				<a href="/proyectos">Ver Más Proyectos</a>
 			</div>
 		</section>
 
@@ -307,7 +307,7 @@ import { FormContact } from "../components/FormContact";
 		}
 
 		.projects {
-			height: 1034px;
+			height: 832px;
 			background: #dcdcdc;
 			display: flex;
 			flex-direction: column;
@@ -344,7 +344,7 @@ import { FormContact } from "../components/FormContact";
 		.carousel_container {
 			width: 99vw;
 			position: relative;
-			height: 500px;
+			height: 397px;
 		}
 
 		.button_projects {
