send to production

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,9 +80,9 @@ import { FormContact } from "../components/FormContact";
 				<CarouselProjects client:only="react" />
 			</div>
 
-			<div class="button_projects">
-				<a href="/proyectos">Ver Más Proyectos</a>
-			</div>
+			<a href="/proyectos" class="button_projects">
+				<p>Ver Más Proyectos</p>
+			</a>
 		</section>
 
 		<section class="clients">
