page index responsive

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,208 @@
-.main{
+.main {
   min-height: 100vh;
+}
+
+.banner {
+  background-image: url('/banner.png');
+  height: 80vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 40%;
+}
+
+.manifest {
+  background-color: #00e95f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+}
+
+.manifest h2 {
+  color: #021731;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: center;
+  line-height: 85%;
+  margin-bottom: 20px;
+}
+
+.manifest p {
+  color: #000;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: justify;
+}
+
+.weare {
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info h2 {
+  color: #51516B;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: bolder;
+  line-height: normal;
+  text-align: center;
+  line-height: 85%;
+  margin-bottom: 20px;
+}
+
+.info p {
+  color: #A8A8A8;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+
+.weare video {
+  width: 95%;
+  border-radius: 31px;
+}
+
+.impact {
+  display: none;
+}
+
+.projects {
+  background: #DCDCDC;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+}
+
+.projects h2,
+.clients h2,
+.contact h2,
+.impact h2 {
+  color: #021731;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-align: center;
+  line-height: 85%;
+  margin-bottom: 10px;
+}
+
+.line {
+  width: 85.455px;
+  height: 3px;
+  background: #00e95f;
+  margin: 0 auto;
+}
+
+.projects p,
+.contact p {
+  margin: 20px 0;
+  color: #51516b;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  line-height: normal;
+  font-weight: 700;
+}
+
+.carousel_container {
+  width: 100%;
+  height: 430px;
+  position: relative;
+}
+
+.button_projects {
+  display: flex;
+  width: 278px;
+  height: 70px;
+  padding: 10px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 37px;
+  background-color: #00e95f;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  color: #021731;
+}
+
+.clients {
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.carouselClients_contaner {
+  position: relative;
+  height: 100px;
+  width: 100%;
+}
+
+.contact {
+  padding: 5%;
+}
+
+
+@media (min-width: 1024px) {
+  .manifest {
+    flex-direction: row;
+    gap: 30px;
+    padding: 5% 10%;
+    justify-content: space-between;
+  }
+
+  .manifest h2 {
+    text-align: start;
+    font-size: 46px;
+  }
+
+  .manifest p {
+    width: 60%;
+    font-weight: 500;
+  }
+
+  .weare {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5% 10%;
+  }
+
+  .weare .info {
+    width: 40%;
+    align-items: flex-start;
+    font-size: 18px;
+    gap: 20px
+  }
+
+  .weare video {
+    width: 45%;
+  }
+
+  .impact {
+    display: flex;
+    padding: 5% 10%;
+    flex-direction: column;
+    gap: 30px
+  }
+
 }
