--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -31,3 +31,23 @@
   justify-content: center;
   gap: 10px
 }
+
+@media (min-width: 1024px) {
+  .footer{
+    flex-direction: row;
+    height: 200px;
+    justify-content: space-between;
+  }
+
+  .logo_container{
+    width: 30%;
+  }
+
+  .info_containers{
+    width: 20%;
+  }
+
+  .info_containers div{
+    justify-content: flex-start;
+  }
+}
